Fixed JDK 9 warnings